# panoptes

./: .gitignore  Dockerfile  MANIFEST  Pipfile  README.md  centralize.py  panoptesctl  pyproject.toml  requirements.txt  setup.py
docs/: CNAME  index.md
docs/aws/: README.md  another.md  aws.md  aws_analyze_policy.json  panoptes_sample.py  used_api_calls.md
docs/samples/: aws_analysis_sample.py  whitelist_example.txt
panoptes/: __init__.py  panoptes.py  panoptesctl.py
panoptes/aws/: __init__.py  analysis.py  analyze.py  attached.py  authentication.py  exceptions.py  output.py  whitelist.py
panoptes/cli/: __init__.py  analysis.py  aws.py  gcp.py
panoptes/cli/aws/: __init__.py  commands.py
panoptes/cli/gcp/: __init__.py  commands.py
panoptes/cloud_authentication/: __init__.py  aws.py
panoptes/cloud_output/: __init__.py  aws_output.py
panoptes/cloud_providers/: __init__.py
panoptes/cloud_providers/aws/: __init__.py  aws_panoptes.py
panoptes/generic/: __init__.py  analysis.py  exceptions.py  helpers.py  output.py  parser.py
panoptes/output/: __init__.py  aws_output.py  json.py  print.py  yaml.py
tests/: test_aws_whitelist.py
